app-src/scripts/task-list/_task-list-d.scss
task-list {
  display: block;
}

.task-list {
  text-align: left;
  min-height: 50px;
  list-style: none;
  // add a little padding to top and bottom, to make drag dropping easier
  padding: 5px 0;
  margin: 0;
  display: block;

  .as-sortable-placeholder,
  .dndPlaceholder {
    margin: 1px 2px 5px 1px;
    display: block;
    min-height: 22px;
    background-color: #dddddd;
    @include dark-theme {
      background-color: $dark-theme-bg-darker;
    }
  }

  @media(max-width: $layout-xs) {
    // make space for the expand icon
    margin-left: 12px;
  }

  // nested lists
  .task-list {
    margin: 2px -5px 10px 5px;

    @media(max-width: $layout-xs) {
      margin: 1px -5px 10px 0;
    }
  }
}

.task {
  $this-inner-padding-left-right: 12px;
  padding: 2px $this-inner-padding-left-right 0;
  display: block;
  margin-bottom: 6px;
  background-color: #ffffff;
  color: #333333;
  position: relative;
  border: 1px solid #dddddd;
  border-bottom-width: 0;

  @include dark-theme {
    border-color: rgb(60, 60, 60);
    background-color: $dark-theme-bg-lighter;
    color: #dddddd;

    &.is-done {
      .time,
      .task-title {
        color: #777777;
      }
      ng-md-icon {
        fill: #777777;
      }
    }
  }

  &.is-done {
    ng-md-icon {
      fill: #aaaaaa !important;
    }

    .time,
    .task-title {
      color: #aaaaaa;
    }

    .task-title {
      text-decoration: line-through;
    }
  }

  &.as-sortable-dragging,
  &:focus {
    background: #eeeeee;
    color: #000000;
    @include dark-theme {
      background-color: $dark-theme-bg-darker;
      color: #dddddd;
    }
  }

  .title-bar-wrapper {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
    min-height: 36px;
    flex-grow: 1;
    flex-basis: 100%;
  }

  .first-line {
    display: flex;
    flex-wrap: nowrap;
    user-select: none;

    @media(max-width: $layout-xs) {
      flex-wrap: wrap;
    }

    $this-button-spacer: 2px;
    $this-button-spacer-mobile: 4px;
    $this-button-size: 34px;
    $this-button-size-mobile: 34px;
    $this-icon-color: #545454;
    .md-icon-button {
      margin: $this-button-spacer;
      height: $this-button-size;
      width: $this-button-size;
      min-width: $this-button-size;
      min-height: $this-button-size;
      padding: 0;
      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
      border: 1px solid #dddddd;
      border-radius: 100%;
      text-align: center;
      background: #ffffff !important;
      overflow: hidden;

      &:hover {
        transform: scale(1.3);
        background: #ffffff;
      }
      &:hover,
      &.is-active {
        background: #000000 !important;
        background: $this-icon-color !important;

        > ng-md-icon {
          fill: #ffffff;
          @include dark-theme {
            fill: #ffffff;
          }
        }
      }
      ng-md-icon {
        fill: $this-icon-color;
      }

      &.delete-btn {
        ng-md-icon.delete-icon {
          fill: $red !important;
          @include dark-theme {
            fill: $red !important;
          }
        }

        &:hover {
          background: $red !important;
          ng-md-icon.delete-icon {
            fill: #ffffff !important;
            @include dark-theme {
              fill: #ffffff !important;
            }
          }
        }

      }

      @media(max-width: $layout-xs) {
        margin: $this-button-spacer-mobile;
        height: $this-button-size-mobile;
        width: $this-button-size-mobile;
        min-width: $this-button-size-mobile;
        min-height: $this-button-size-mobile;
      }
    }

    // Button Stuff
    ng-md-icon {
      fill: #545454;
    }

    .play-btn {
      padding-left: 0;
      margin-left: -2px;
      margin-right: 3px;
      // move over original link btn
      position: relative;
      z-index: 1;
    }
  }

  .controls {
    white-space: nowrap;
    text-align: right;
    // move a little closer to the right
    margin-right: -2px;

    // nice idea but problematic with the time button and also the play and original issue
    //transition: 300ms;
    //&:hover {
    //  transform: scale(1.2);
    //}
    @media(max-width: $layout-xs) {
      white-space: normal;
    }
  }

  &.is-current {
    background: $light-green;
    color: #000000;

    @include dark-theme {
      background-color: $dark-green;
      color: #ffffff;
    }

    .md-bar {
      background-color: $green !important;
    }
    .play-btn {
      ng-md-icon {
        fill: #000000 !important;
        @include dark-theme {
          fill: #ffffff !important;
        }
      }
    }
  }

  .md-bar {
    background-color: #cccccc !important;
  }

  md-progress-linear {
    margin-left: -12px;
    margin-right: -12px;
    width: auto;
  }

  md-progress-linear.md-default-theme .md-container,
  md-progress-linear .md-container {
    background: none;
  }

  .handle {
    margin: 0 4px 0 0;
  }

  .task-title {
    text-align: left;
    cursor: pointer;
    outline: none;
    margin-left: 10px;
    .text {
      outline: none;
      display: block;
      width: 100%;
      min-height: 14px;
    }
  }

  form {
    width: 100%;
  }
  input {
    outline: none;
  }
  input {
    width: 100%;
    display: block;
    box-sizing: border-box;
    height: 30px;
    padding: 4px 10px;
    border: none;
  }

  .time {
    white-space: nowrap;
    margin-left: 10px;
    @media(max-width: $layout-xs) {
      margin-left: 8px;
      font-size: 13px;
    }
  }

  .notes {
    display: block;
    margin-left: -$this-inner-padding-left-right;
    margin-right: -$this-inner-padding-left-right;
    overflow: hidden;
    padding-left: $this-inner-padding-left-right;
    padding-right: $this-inner-padding-left-right;

    section {
      margin-top: 10px;
    }

    .md-caption {
      font-weight: bold;
      margin-bottom: 6px;
    }
  }

  a {
    cursor: pointer;
  }

  .status {
    margin-bottom: 10px;
  }
  .changelog,
  .comments,
  .attachments {
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0;
    margin: 0 0 10px;
    list-style-type: none;
    li {
      padding: 0;
      font-size: 14px;
      margin-top: 5px;
    }
  }

  .comments {
    li {
      position: relative;
      margin-top: 16px;
      &:first-child {
        margin-top: 8px;
        &:before {
          display: none;
        }
      }
    }
    p:first-child {
      display: inline;
    }
    p {
      margin-bottom: 8px;
      margin-top: 8px;
    }
  }

}

// animations
.is-animation-ready {
  .first-line {
    .md-button,
    md-checkbox {
      transition: 200ms;
    }
  }

  .task {
    @include crawl-in-out;
  }

  .notes {
    @include ng-slide-down-up(400px, 200px);
  }
}

